--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,5 +12,6 @@ endif()
 project ("ChatApp")
 
 # Uwzględnij podprojekty.
+add_subdirectory("CMakeProject1/Common")
 add_subdirectory("CMakeProject1/Client")
 add_subdirectory("CMakeProject1/Server")
