feat(messages): Server now properly forwards messages to other connected clients
Clients can now send messages to the server, and the server can now forward it to other users. The users for now see from what remote ip and port it came from

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,6 @@ endif()
 project ("ChatApp")
 
 # Uwzględnij podprojekty.
-add_subdirectory("CMakeProject1/Common")
+add_subdirectory("CMakeProject1/Shared")
 add_subdirectory("CMakeProject1/Client")
 add_subdirectory("CMakeProject1/Server")
