--- a/CMakeProject1/Client/CMakeLists.txt
+++ b/CMakeProject1/Client/CMakeLists.txt
@@ -1,9 +1,8 @@
 ﻿# CMakeList.txt: projekt CMake dla elementu CMakeProject1, dołącz źródło i zdefiniuj
 # tutaj logikę specyficzną dla projektu.
 #
-
 # Dodaj źródło do pliku wykonywalnego tego projektu.
-find_package(Boost REQUIRED COMPONENTS asio)
+find_package(Boost REQUIRED COMPONENTS system filesystem)
 
 set(SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
 set(HEADER_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include")
@@ -20,12 +19,12 @@ file(GLOB_RECURSE HEADERS
 add_executable (client ${SOURCES})
 
 target_include_directories(client PRIVATE ${HEADER_DIR})
+target_include_directories(client PRIVATE ${Boost_INCLUDE_DIRS})
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET client PROPERTY CXX_STANDARD 20)
 endif()
 
 target_link_libraries(client PRIVATE Messages)
-target_link_libraries(client PRIVATE Boost::asio)
 
 # TODO: Dodaj testy i zainstaluj elementy docelowe w razie potrzeby.
