--- a/CMakeProject1/Server/CMakeLists.txt
+++ b/CMakeProject1/Server/CMakeLists.txt
@@ -1,9 +1,8 @@
 ﻿# CMakeList.txt: projekt CMake dla elementu CMakeProject1, dołącz źródło i zdefiniuj
 # tutaj logikę specyficzną dla projektu.
 #
-
 # Dodaj źródło do pliku wykonywalnego tego projektu.
-find_package(Boost REQUIRED COMPONENTS asio)
+find_package(Boost REQUIRED COMPONENTS system filesystem)
 
 set(SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
 set(HEADER_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include")
@@ -20,13 +19,12 @@ file(GLOB_RECURSE HEADERS
 add_executable (server ${SOURCES})
 
 target_include_directories(server PRIVATE ${HEADER_DIR})
+target_include_directories(server PRIVATE ${Boost_INCLUDE_DIRS})
 
 
-if (CMAKE_VERSION VERSION_GREATER 3.12)
-  set_property(TARGET server PROPERTY CXX_STANDARD 20)
-endif()
+
+
 
 target_link_libraries(server PRIVATE Messages)
-target_link_libraries(server PRIVATE Boost::asio)
 
 # TODO: Dodaj testy i zainstaluj elementy docelowe w razie potrzeby.
