feat(files): Changed project structure,skeleton for file sending (non-working)
changed the project structure, added a factory design pattern for messages, and prepared the project for adding file sending (not working at the moment)

--- a/CMakeProject1/Shared/CMakeLists.txt
+++ b/CMakeProject1/Shared/CMakeLists.txt
@@ -8,7 +8,12 @@ file(GLOB_RECURSE MESSAGE_SOURCES CONFIGURE_DEPENDS
     "${CMAKE_CURRENT_SOURCE_DIR}/include/*.h"
 )
 
-add_library(Messages STATIC ${MESSAGE_SOURCES})
+add_library(Messages STATIC ${MESSAGE_SOURCES}
+        include/MessageTypes/Utilities/HeaderHelper.h
+        src/MessageTypes/File/FileMessage.cpp
+        include/MessageTypes/File/FileMessage.h
+        src/MessageTypes/Utilities/MessageFactory.cpp
+        include/MessageTypes/Utilities/MessageFactory.h)
 
 target_include_directories(Messages PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
