feat(gtest): add gtests to the project
added gtests to the project which test basic functionality of the server/client chatroom.

Additionally refactored the code to be cleaner, more readable, and errorproof (all thanks to gtests)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,3 +20,4 @@ project ("ChatApp")
 add_subdirectory("CMakeProject1/Shared")
 add_subdirectory("CMakeProject1/Client")
 add_subdirectory("CMakeProject1/Server")
+add_subdirectory("CMakeProject1/Tests")
