refactor(client commands): Add class using the Command Design Pattern for client commands
The commands are now handled by the CommandProcessor class, to make the ClientMain.cpp file in the Client Project more readable

--- a/CMakeProject1/Client/CMakeLists.txt
+++ b/CMakeProject1/Client/CMakeLists.txt
@@ -17,6 +17,9 @@ file(GLOB_RECURSE HEADERS
 )
 
 add_executable (client ${SOURCES}
+		include/Interface/ICommand.h
+		src/Server/CommandProcessor.cpp
+		include/Server/CommandProcessor.h
 )
 
 target_include_directories(client PRIVATE ${HEADER_DIR})
