--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,3 +25,11 @@ add_subdirectory("CMakeProject1/Shared")
 add_subdirectory("CMakeProject1/Client")
 add_subdirectory("CMakeProject1/Server")
 add_subdirectory("CMakeProject1/Tests")
+
+#sudo apt update
+#sudo apt install ninja-build build-essential libboost-all-dev libgtest-dev
+
+#mkdir -p build
+#cd build
+#cmake -G Ninja -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_COMPILER=g++ ..
+#ninja
